src/objects/Patient_Procedure_Form__c.object
<CustomObject>
    <description>Table that maintains a list of forms a patient needs to fill out.  This list is based on the procedure list for plans of treatment tied to this patient.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Patient Procedure Forms</relationshipLabel>
        <relationshipName>Patient_Procedure_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Form_Name__c</fullName>
        <description>used to pull this form office form relationship,  but this is here to support user added forms on the page</description>
        <label>Form Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Status__c</fullName>
        <label>Form Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Scanned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forms_Category__c</fullName>
        <label>Forms Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Release Forms</fullName>
                </value>
                <value>
                    <fullName>Surgical Consent</fullName>
                </value>
                <value>
                    <fullName>Prosth Consent</fullName>
                </value>
                <value>
                    <fullName>Post OP Instruction</fullName>
                </value>
                <value>
                    <fullName>Phased Forms</fullName>
                </value>
                <value>
                    <fullName>Treatment Completion</fullName>
                </value>
                <value>
                    <fullName>Additional Uploads</fullName>
                </value>
                <value>
                    <fullName>Medical Records</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Office_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Office Form</label>
        <referenceTo>Office_Form__c</referenceTo>
        <relationshipLabel>Patient Procedure Forms</relationshipLabel>
        <relationshipName>Patient_Procedure_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patient_POT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient POT</label>
        <referenceTo>Patient_POT__c</referenceTo>
        <relationshipLabel>Patient Procedure Forms</relationshipLabel>
        <relationshipName>Patient_Procedure_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Upload_Date__c</fullName>
        <label>Upload Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Patient Procedure Form</label>
    <nameField>
        <displayFormat>PPF-{0000}</displayFormat>
        <label>Patient Procedure Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Procedure Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>